Todays volunteers alignment fix

--- a/client/stylesheets/less/style.less
+++ b/client/stylesheets/less/style.less
@@ -483,6 +483,7 @@ a.red-cross-link {
     float:none;
     text-align:left;
     margin-right:-4px;
+    vertical-align: top;
 }
 
 @media (min-width: 1240px) {
